[package]
name = "{{project-name}}"
version = "0.1.0"
authors = ["{{authors}}"]
edition = "2021"

[dependencies]
#https://doc.rust-lang.org/cargo/reference/resolver.html
actix-web = {version="3.2.0", features=["rustls"]}
anyhow = "1.0.58"
clap = { version = "3.2.8", features = ["derive", "env", "wrap_help"] }
log = "0.4.14"
serde = "1.0.117"
simple_logger = "2.2.0"
